# bosch_drivers

./: .gitignore  README.md
adc_driver/: CMakeLists.txt  package.xml
adc_driver/include/adc_driver/: adc_driver.h
adc_driver/src/: adc_driver.cpp
arduino_firmware/: Encoder.h  Makefile  bosch_arduino_interface.ino
arduino_interface/: CMakeLists.txt  package.xml
arduino_interface/include/arduino_interface/: arduino_constants.hpp  arduino_interface.hpp
arduino_interface/src/: arduino_interface.cpp
bma180_driver/: CMakeLists.txt  package.xml
bma180_driver/include/bma180_driver/: bma180.hpp  bma180_parameters.hpp
bma180_driver/msg/: bma180_measurement.msg
bma180_driver/src/: bma180.cpp
bmc050_driver/: CMakeLists.txt  package.xml
bmc050_driver/include/bmc050_driver/: bmc050.hpp
bmc050_driver/msg/: bmc050_measurement.msg
bmc050_driver/src/: bmc050.cpp
bmg160_driver/: CMakeLists.txt  package.xml
bmg160_driver/include/bmg160_driver/: bmg160.hpp
bmg160_driver/msg/: bmg160_measurement.msg
bmg160_driver/src/: bmg160.cpp
bmp085_driver/: CMakeLists.txt  package.xml
bmp085_driver/include/bmp085_driver/: bmp085_driver.hpp  bmp085_parameters.hpp
bmp085_driver/msg/: bmp085_measurement.msg
bmp085_driver/src/: bmp085_driver.cpp  bmp085_parameters.cpp
bosch_drivers/: CMakeLists.txt  package.xml
bosch_drivers_basic_nodes/: CMakeLists.txt  package.xml
bosch_drivers_basic_nodes/src/: adc_node.cpp  bma180_node.cpp  encoder_node.cpp  gpio_node.cpp  pwm_node.cpp
bosch_drivers_common/: CMakeLists.txt  package.xml
bosch_drivers_common/include/bosch_drivers_common/: bosch_drivers_common.hpp  bosch_drivers_communication_properties.hpp  bosch_drivers_hardware_interface.hpp  bosch_drivers_parameters.hpp  bosch_drivers_sensor_driver.hpp  bosch_drivers_sensor_driver_built_in.hpp  bosch_drivers_sensor_driver_internal.hpp
bosch_drivers_udev_rules/: 51-usb-avrisp.rules  52-usb-arduino.rules  53-usb-sub20.rules
encoder_driver/: CMakeLists.txt  package.xml
encoder_driver/include/encoder_driver/: encoder_driver.h
encoder_driver/src/: encoder_driver.cpp
gpio_driver/: CMakeLists.txt  package.xml
gpio_driver/include/gpio_driver/: gpio_driver.h
gpio_driver/src/: gpio_driver.cpp
photo/: package.xml
pwm_driver/: CMakeLists.txt  package.xml
pwm_driver/include/pwm_driver/: pwm_driver.h
pwm_driver/src/: pwm_driver.cpp
sub20_interface/: CMakeLists.txt  package.xml
sub20_interface/include/sub20_interface/: sub20_interface.hpp
sub20_interface/src/: sub20_interface.cpp
sub20_interface/src/libsub20/: libsub20.patch
uniserial/: CMakeLists.txt  package.xml
uniserial/include/uniserial/: uniserial.hpp
uniserial/src/: uniserial.cpp
