<?xml version="1.0"?>
<package>
  <name>adc_driver</name>
  <version>0.1.1</version>
  <description>The adc_driver package provides a driver for analog-to-digital converters connected to or incorporated into hardware interfaces such as the Arduino.</description>
  <url type="website">http://wiki.ros.org/adc_driver</url>
  <url type="repository">https://github.com/bosch-ros-pkg/bosch_drivers/adc_driver</url>
  <url type="bugtracker">https://github.com/bosch-ros-pkg/bosch_drivers/adc_driver/issues</url>
  <license>BSD</license>
  <maintainer email="Philip.Roan@us.bosch.com">Philip Roan</maintainer>
  <author>Kai Franke</author>

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>bosch_drivers_common</build_depend>

  <run_depend>bosch_drivers_common</run_depend>

</package>