<?xml version="1.0"?>
<package>
  <name>arduino_interface</name>
  <version>0.1.1</version>
  <description>The arduino_interface class contains details specifics to 
  interfacing sensors with software using an Arduino as
  the physical hardware interface.  
     
  Each instantiation of this class is specific to an 
  Arduino hardware device, indentified by the serial port  name.
     
  NOTE: To use this package, you must deactivate the Arduino's
  pullups on the SDA and SCL lines. By default, these pullups are
  enabled. To deactivate them, you must open the Wire library in 
  your libraries folder and comment out two lines in the twi.c 
  sketch.
     
  This class inherits the bosch_drivers_hardware_interface
  base class. In this manner, specific bosch_drivers_sensor_driver
  classes can access sensor data through the virtual functions provided
  by the parent bosch_drivers_hardware_interface class.

  The arduino_firmware directory contains a makefile and .ino code for
  building the hex files to upload to the Arduino. After a `make', type
  `make upload' to upload to firmware to the Arduino.
  </description>
  <url type="website">http://wiki.ros.org/arduino_interface</url>
  <url type="repository">https://github.com/bosch-ros-pkg/bosch_drivers/arduini_interface</url>
  <url type="bugtracker">https://github.com/bosch-ros-pkg/bosch_drivers/arduino_interface/issues</url>
  <license>BSD</license>
  <maintainer email="Philip.Roan@us.bosch.com">Philip Roan</maintainer>
  <author>Joshua Vasquez</author>
  <author email="Philip.Roan@us.bosch.com">Philip Roan</author>


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>bosch_drivers_common</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>uniserial</build_depend>

  <run_depend>bosch_drivers_common</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>uniserial</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->
  </export>
</package>