<?xml version="1.0"?>
<package>
  <name>bosch_drivers</name>
  <version>0.4.4</version>
  <description>Collection of hardware drivers.
  This metapackage primarily contains drivers for MEMS sensors from Bosch Sensortec. Sensors require a hardware interface, such as an Ardunio, to connect to the computer. The drivers are not dependent on ROS, but basic ROS nodes are provided. Other hardware drivers in use at Bosch RTC are also found in this metapackage.</description>
  <url type="website">http://wiki.ros.org/bosch_drivers</url>
  <url type="repository">https://github.com/bosch-ros-pkg/bosch_drivers</url>
  <url type="bugtracker">https://github.com/bosch-ros-pkg/bosch_drivers/issues</url>
  <license>BSD</license>
  <license>LGPL</license>
  <license>Apache 2.0</license>
  <maintainer email="Philip.Roan@us.bosch.com">Philip Roan</maintainer>
  <author>Philip Roan</author>
  <author>Benjamin Pitzer</author>
  <author>Joshua Vasquez</author>
  <author>and others</author>


  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>bosch_drivers_common</run_depend>
  <run_depend>bmp085_driver</run_depend>
  <run_depend>arduino_interface</run_depend>
  <run_depend>gpio_driver</run_depend>
  <run_depend>encoder_driver</run_depend>
  <run_depend>pwm_driver</run_depend>
  <run_depend>bosch_drivers_basic_nodes</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <metapackage />
  </export>
</package>