<?xml version="1.0"?>
<package>
  <name>bosch_drivers_basic_nodes</name>
  <version>0.1.1</version>
  <description>This package contains basic nodes for running Bosch MEMS sensors. The nodes also serve as examples. Further examples can be found in bosch_drivers_examples.</description>
  <url type="website">http://wiki.ros.org/bosch_drivers_basic_nodes</url>
  <url type="repository">https://github.com/bosch-ros-pkg/bosch_drivers/bosch_drivers_basic_nodes</url>
  <url type="bugtracker">https://github.com/bosch-ros-pkg/bosch_drivers/bosch_drivers_basic_nodes/issues</url>
  <license>BSD</license>
  <maintainer email="Philip.Roan@us.bosch.com">Philip Roan</maintainer>
  <author>Joshua Vasquez</author>
  <author>Kai Franke</author>
  <author email="Philip.Roan@us.bosch.com">Philip Roan</author>


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>bosch_drivers_common</build_depend>
  <build_depend>arduino_interface</build_depend>
  <build_depend>gpio_driver</build_depend>
  <build_depend>pwm_driver</build_depend>
  <build_depend>encoder_driver</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>bosch_drivers_common</run_depend>
  <run_depend>arduino_interface</run_depend>
  <run_depend>gpio_driver</run_depend>
  <run_depend>pwm_driver</run_depend>
  <run_depend>encoder_driver</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>