<?xml version="1.0"?>
<package>
  <name>pwm_driver</name>
  <version>0.1.1</version>
  <description>The pwm_driver package</description>
  <url type="website">http://wiki.ros.org/pwm_driver</url>
  <url type="repository">https://github.com/bosch-ros-pkg/bosch_drivers/pwm_driver</url>
  <url type="bugtracker">https://github.com/bosch-ros-pkg/bosch_drivers/pwm_driver/issues</url>
  <license>BSD</license>
  <maintainer email="Philip.Roan@us.bosch.com">Philip Roan</maintainer>
  <author>Kai Franke</author>

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>bosch_drivers_common</build_depend>

  <run_depend>bosch_drivers_common</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>